Add bootstrap_expect as a config option
This was the silver bullet to getting the server working in
test-kitchen.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -14,3 +14,7 @@ suites:
   - name: server
     run_list:
       - recipe[consul_minimal::install]
+    attributes:
+      consul_minimal:
+        bootstrap_expect: 1
+        mode: server
